feat(security): 로그아웃 swagger 오퍼레이션 등록